<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TextView">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_test_1"
        android:textSize="25sp"
        android:textColor="#00ff00"
        android:gravity="center"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_test_2"
        android:textSize="25sp"
        android:textColor="#0000ff"
        android:gravity="center"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_test_3"
        android:textSize="25sp"
        android:textColor="#ff0000"
        android:gravity="center"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>